# upper-envelope

./: .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg  tox.ini
.envs/: testenv.yml
.github/workflows/: main.yml
docs/: time_period2_ops.py
docs/tutorials/: ue_drued_jorg.ipynb  upper_jor_drued_period2.ipynb
src/upper_envelope/: __init__.py  drued_jorg_numba.py  upper_jor_drued.py  upper_jorg_drued.py
src/upper_envelope/fues_jax/: fues_jax.py
src/upper_envelope/jax/: __init__.py  drued_jorg_jax.py
src/upper_envelope/jax/fues_jax/: fues_jax.py
src/upper_envelope/numba/: __init__.py
tests/: conftest.py  test_drued_jorg_numba.py  test_fues_jax.py  test_fues_numba.py  test_jorg_drued_jax.py  test_upper_jor_drued.py
tests/utils/: comparison_interp.py
