# ======================================================================================
# Project metadata
# ======================================================================================
[project]
name               = "upper_envelope"
description        = "Upper envelope scan for dynamic discrete-continuous life cycle models."
requires-python    = ">=3.10"
authors            = [
  { name="Max Blesch", email="maximilian.blesch@hu-berlin.de" },
  { name="Sebastian Gsell", email="sebastian.gsell@econ.lmu.de" },
]
classifiers        = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Build Tools",
]
keywords           = []       # if you have any
dependencies       = []       # list runtime deps here, e.g. ["numpy>=1.25"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
"Github" = "https://github.com/OpensourceEconomics/upper-envelope"

[project.scripts]
upper_envelope = "upper_envelope.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]


# ======================================================================================
# Build system configuration
# ======================================================================================

[build-system]
requires = [
  "setuptools>=61.0.0",  # setuptools PEP-621 support
  "wheel",
  "setuptools_scm[toml]>=6.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/upper_envelope/_version.py"


# ======================================================================================
# Ruff configuration
# ======================================================================================

[tool.ruff]
target-version = "py310"
fix            = true
ignore         = ["F401"]


# ======================================================================================
# Misc configuration
# ======================================================================================

[tool.yamlfix]
line_length         = 88
sequence_style      = "block_style"
none_representation = "null"
